--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/ambar_000/Desktop/597/javacsv.jar"/>
+	<classpathentry kind="lib" path="javacsv.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
